--- a/css/style.production.css
+++ b/css/style.production.css
@@ -10,6 +10,22 @@ primary-color (green): #4c764c
 secondary-color (orange): #ffa424
 */
 
+@font-face { 
+  font-family: "Open Sans";
+  font-weight: 400;
+  src: url(../fonts/Open_Sans/OpenSans-Regular.woff2) format("woff2"),
+    url(../fonts/Open_Sans/OpenSans-Regular.woff) format("woff"),
+    url(../fonts/Open_Sans/OpenSans-Regular.otf) format("opentype");
+}
+@font-face { 
+  font-family: "Montserrat";
+  font-style: bold;
+  font-weight: 700;
+  src: url(../fonts/Montserrat/Montserrat-Bold.woff2) format("woff2"),
+    url(../fonts/Montserrat/Montserrat-Bold.woff) format("woff"),
+    url(../fonts/Montserrat/Montserrat-Bold.otf) format("opentype");
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -23,6 +39,7 @@ body {
   font-size: 16px;
   color: #000;
   line-height: 1.6;
+  letter-spacing: 0.2px;
   min-height: 100vh;
 }
 
@@ -416,6 +433,10 @@ button:active,
 .about__item h2 {
   padding: 10px;
   margin: 5px;
+}
+
+.about__item p {
+  line-height: 1.8;
 }
 
 .about__item-content {
